@@ -4,6 +4,7 @@ import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 
@@ -12,7 +13,7 @@ import java.nio.charset.StandardCharsets;
  * 
  * Flouci API Flow:
  *   1. Generate payment → get a payment link + payment_id
- *   2. Open link in browser → user pays via Flouci app
+ *   2. Open link in WebView → user pays via Flouci app
  *   3. Verify payment status via payment_id
  * 
  * Test credentials (Flouci sandbox):
@@ -34,9 +35,9 @@ public class FlouciPaymentService {
         ? System.getenv("FLOUCI_APP_SECRET")
         : "22189b3c-b6cf-4bca-bfa7-3b9470bc38f0";
 
-    // Redirect URLs (localhost for desktop app)
-    private static final String ACCEPT_URL = "https://tabaani.tn/payment/success";
-    private static final String DECLINE_URL = "https://tabaani.tn/payment/decline";
+    // Redirect URLs — Flouci redirects here after success/fail
+    public static final String SUCCESS_URL = "https://tabaani.tn/payment/success";
+    public static final String FAIL_URL = "https://tabaani.tn/payment/fail";
 
     /**
      * Result class for payment operations
@@ -66,33 +67,37 @@ public class FlouciPaymentService {
     /**
      * Generate a Flouci payment link.
      * 
+     * According to Flouci API spec, generate_payment endpoint requires:
+     *   - app_token, app_secret, amount, success_link, fail_link in the JSON body
+     *   - No auth headers required for this endpoint
+     * 
      * @param amountInDT Amount in Tunisian Dinars
      * @param description Payment description / tracking ID
-     * @return PaymentResult with payment link to open in browser
+     * @return PaymentResult with payment link to open in WebView
      */
     public PaymentResult generatePayment(double amountInDT, String description) {
         try {
             // Convert DT to millimes (1 DT = 1000 millimes)
             int amountInMillimes = (int) Math.round(amountInDT * 1000);
 
-            // Build JSON request body
+            // Build JSON request body — field names per official Flouci API spec
             JsonObject body = new JsonObject();
             body.addProperty("app_token", APP_TOKEN);
             body.addProperty("app_secret", APP_SECRET);
             body.addProperty("amount", String.valueOf(amountInMillimes));
-            body.addProperty("accept_url", ACCEPT_URL);
-            body.addProperty("decline_url", DECLINE_URL);
+            body.addProperty("accept_card", "true");
+            body.addProperty("success_link", SUCCESS_URL);
+            body.addProperty("fail_link", FAIL_URL);
             body.addProperty("session_timeout_secs", 1200);
             body.addProperty("developer_tracking_id", sanitizeTrackingId(description));
 
             System.out.println("[FLOUCI] Generating payment for " + amountInDT + " DT (" + amountInMillimes + " millimes)");
+            System.out.println("[FLOUCI] Request body: " + body);
 
-            // Make HTTP POST request
-            HttpURLConnection conn = (HttpURLConnection) new URL(GENERATE_URL).openConnection();
+            // Make HTTP POST request — generate_payment does NOT need auth headers
+            HttpURLConnection conn = (HttpURLConnection) new URI(GENERATE_URL).toURL().openConnection();
             conn.setRequestMethod("POST");
             conn.setRequestProperty("Content-Type", "application/json");
-            conn.setRequestProperty("apppublic", APP_TOKEN);
-            conn.setRequestProperty("appsecret", APP_SECRET);
             conn.setDoOutput(true);
             conn.setConnectTimeout(15000);
             conn.setReadTimeout(15000);
@@ -115,7 +120,7 @@ public class FlouciPaymentService {
 
                 if (link != null && paymentId != null) {
                     return new PaymentResult(true,
-                        "Lien de paiement genere! Ouvrez-le pour payer.",
+                        "Lien de paiement genere avec succes !",
                         paymentId, link, "pending");
                 } else {
                     return new PaymentResult(false,
@@ -130,6 +135,7 @@ public class FlouciPaymentService {
 
         } catch (Exception e) {
             System.err.println("[FLOUCI] Error: " + e.getMessage());
+            e.printStackTrace();
             return new PaymentResult(false,
                 "Erreur de connexion Flouci: " + e.getMessage(),
                 null, null, "error");
@@ -138,13 +144,14 @@ public class FlouciPaymentService {
 
     /**
      * Verify a Flouci payment status.
+     * This endpoint REQUIRES auth headers: apppublic + appsecret
      * 
      * @param paymentId The payment ID returned from generatePayment
      * @return PaymentResult with current status
      */
     public PaymentResult verifyPayment(String paymentId) {
         try {
-            HttpURLConnection conn = (HttpURLConnection) new URL(VERIFY_URL + paymentId).openConnection();
+            HttpURLConnection conn = (HttpURLConnection) new URI(VERIFY_URL + paymentId).toURL().openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Content-Type", "application/json");
             conn.setRequestProperty("apppublic", APP_TOKEN);
@@ -165,7 +172,7 @@ public class FlouciPaymentService {
 
                 if ("SUCCESS".equalsIgnoreCase(status)) {
                     return new PaymentResult(true,
-                        "Paiement Flouci reussi!",
+                        "Paiement Flouci reussi !",
                         paymentId, null, "success");
                 } else {
                     return new PaymentResult(false,
